@@ -1,3 +1,5 @@
+- Refactor: Removes ProviderStrategy class [#qubIT-Omnis-7913]
+
 2.5.0 (20-01-2025)
 - Refactor: Removes unused create method that does not receive a description in AccessControlProfile [#qubIT-Omnis-7974]
 - Refactor: Removes ObjectProviderStrategy field from AccessControlProfile entity [#qubIT-Omnis-7054]
